--- a/simple-theme/assets/style.css
+++ b/simple-theme/assets/style.css
@@ -13,175 +13,150 @@ This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
 */
 
-
-
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-.section-01{
-    position: relative;
-    box-shadow: 0px 5px 7px rgb(0,0,0,20%);
-    padding-bottom: 12px;
-    z-index: 5555;
-    min-width: 100%;
+.section-01 {
+  position: relative;
+  box-shadow: 0px 5px 7px rgb(0, 0, 0, 20%);
+  padding-bottom: 12px;
+  z-index: 5555;
+  min-width: 100%;
 }
 
-header .logo{
-    text-align: center;
-    padding-top:10px;
+header .logo {
+  text-align: center;
+  padding-top: 10px;
 }
 
-
-header .logo img{
-    max-width: 270px;
-
+header .logo img {
+  max-width: 270px;
 }
-nav ul{
-    list-style: none;
-    display: flex;
-    justify-content: center;
+nav ul {
+  list-style: none;
+  display: flex;
+  justify-content: center;
 }
 
-nav ul li a{
-    text-decoration: none;
-    font-size: 24px;
-    margin:auto 10px
+nav ul li a {
+  text-decoration: none;
+  font-size: 24px;
+  margin: auto 10px;
 }
-nav ul li a:hover{
-    border-bottom: 1px solid black;
-    transition: border-bottom 1s linear;
-}
-
-main .container{
-    padding: 0 100px;
-    background-color: rgb(249, 237, 237);
+nav ul li a:hover {
+  border-bottom: 1px solid black;
+  transition: border-bottom 1s linear;
 }
 
-.section-02{
-    display: flex;
-    align-items: center;
-    gap:15px;
-   
-}
-.section-02 .section-02-image img{
-max-width: 100%;
-
-
-}
-.section-02 .section-02-content h1{
-
-      font-size: 56px;
-      font-weight: normal;  
-
+main .container {
+  padding: 0 100px;
+  background-color: rgb(249, 237, 237);
 }
 
-.section-02 .section-02-content p{
-
-    font-size: 26px;
-    padding:25px 0;
-
-
+.section-02 {
+  display: flex;
+  align-items: center;
+  gap: 15px;
 }
-.section-02 .section-02-content button{
-    padding:10px;
-    background-color:rgb(40, 40, 40);
-    color: white;
+.section-02 .section-02-image img {
+  max-width: 100%;
 }
-
-.section-03{
-    background-color: white;
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-    padding:80px 40px;
+.section-02 .section-02-content h1 {
+  font-size: 56px;
+  font-weight: normal;
 }
 
-.section-04{
-    background-color: rgb(249, 237, 237);
-    padding:10% 20%;
-
+.section-02 .section-02-content p {
+  font-size: 26px;
+  padding: 25px 0;
 }
-.section-04 .section-04-content{
-    display: flex;
+.section-02 .section-02-content button {
+  padding: 10px;
+  background-color: rgb(40, 40, 40);
+  color: white;
+}
+
+.section-03 {
+  background-color: white;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding: 80px 40px;
+}
+
+.section-04 {
+  background-color: rgb(249, 237, 237);
+  padding: 10% 20%;
+}
+.section-04 .section-04-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.section-04 .section-04-content p:nth-of-type(1) {
+  font-size: 42px;
+}
+.section-04 .section-04-content p:nth-of-type(2) {
+  font-size: 22px;
+}
+
+.container-section-05 {
+  padding: 0 100px;
+  background-color: rgb(249, 237, 237);
+}
+.section-05 {
+  display: flex;
+  align-items: center;
+  gap: 80px;
+}
+.section-05 .section-05-image img {
+  max-width: 100%;
+}
+.section-05 .section-05-content h1 {
+  font-size: 56px;
+  font-weight: normal;
+}
+
+.section-05 .section-05-content p {
+  font-size: 26px;
+  padding: 25px 0;
+}
+.section-05 .section-05-content button {
+  padding: 10px;
+  background-color: rgb(40, 40, 40);
+  color: white;
+}
+@media (max-width: 768px) {
+  .section-02 {
     flex-direction: column;
-    align-items: center;
-}
-.section-04 .section-04-content p:nth-of-type(1){
-    font-size: 42px;
-}
-.section-04 .section-04-content p:nth-of-type(2){
-    font-size: 22px;
-}
+  }
+  .section-05 {
+    flex-direction: column;
+  }
 
-.container-section-05{
-    padding: 0 100px;
-    background-color: rgb(249, 237, 237);
-}
-.section-05{
-    display: flex;
-    align-items: center;
-    gap:80px;
-   
-}
-.section-05 .section-05-image img{
-max-width: 100%;
-
-
-}
-.section-05 .section-05-content h1{
-
-      font-size: 56px;
-      font-weight: normal;  
-
+  main.container {
+    margin: auto 50px;
+  }
 }
 
-.section-05 .section-05-content p{
+@media (max-width: 480px) {
+  .section-04 {
+    padding: 10% 8%;
+  }
+  .section-02 {
+    flex-direction: column;
+  }
+  .section-05 {
+    flex-direction: column;
+  }
 
-    font-size: 26px;
-    padding:25px 0;
-
-
-}
-.section-05 .section-05-content button{
-    padding:10px;
-    background-color:rgb(40, 40, 40);
-    color: white;
-}
-@media (max-width:768px){
-
-    .section-02{
-      flex-direction: column;
-    
-    }
-    .section-05{
-      flex-direction: column;
-    
-    }
-
-    main.container{
-        margin: auto 50px;
-    }
-    
-
-}
-
-@media (max-width:480px){
-
-    .section-02{
-      flex-direction: column;
-    
-    }
-    .section-05{
-        flex-direction: column;
-      
-      }
-
-    main.container{
-        margin: auto 20px;
-    }
-    
-
+  main.container {
+    margin: auto 20px;
+  }
+  main .container,
+  .container-section-05 {
+    padding: 0 20px;
+  }
 }
