--- a/Newrich/style.css
+++ b/Newrich/style.css
@@ -231,6 +231,40 @@ nav .navbar .links li:hover a:not(.sub-menu li a) {
   font-weight: 500;
 }
 
+.section-02 {
+  padding: 60px 0;
+  background-color: rgba(245, 245, 245, 1);
+}
+
+.section-02 h2 {
+  font-size: 44px;
+  font-weight: 600;
+  line-height: 56px;
+  max-width: 522px;
+  margin-bottom: 9px;
+}
+.section-02 p {
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 29px;
+  margin-bottom: 32px;
+  color: rgba(142, 142, 142, 1);
+}
+.section-02 a {
+  background: rgba(255, 84, 62, 1);
+  text-decoration: none;
+  color: #fff;
+  font-size: 18px;
+  padding: 15px 32px;
+  line-height: 24px;
+  border-radius: 4px;
+  border: none;
+}
+.section-02 .section-02-content {
+  max-width: 516px;
+  padding-bottom: 47px;
+}
+
 @media screen and (max-width: 1199px) and (min-width: 1101px) {
   .heroSection .heroSection-content h1 {
     font-size: 36px;
@@ -241,6 +275,9 @@ nav .navbar .links li:hover a:not(.sub-menu li a) {
     font-size: 16px;
     line-height: 26px;
     margin-top: 20px;
+  }
+  .section-02 .section-02-img img {
+    width: 378px;
   }
 }
 
@@ -385,6 +422,21 @@ nav .navbar .links li:hover a:not(.sub-menu li a) {
   }
   .navbar .links .try-btn-mobile {
     display: block;
+  }
+
+  /* section-02 css */
+
+  .section-02 .section-02-content h2 {
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 39px;
+  }
+  .section-02 .section-02-content a {
+    font-size: 16px;
+    padding: 11px 12px;
+  }
+  .section-02 .section-02-img img {
+    width: 279px;
   }
 }
 @media (max-width: 920px) {
@@ -548,6 +600,28 @@ nav .navbar .links li:hover a:not(.sub-menu li a) {
     display: flex;
     flex-direction: column;
     align-items: center;
+  }
+
+  /* section-02 css */
+
+  .section-02 {
+    padding: 36px 0;
+  }
+
+  .section-02 .section-02-content {
+    padding-bottom: 0;
+  }
+  .section-02 .section-02-content h2 {
+    font-size: 20px;
+    line-height: 32px;
+    margin-bottom: 14px;
+  }
+  .section-02 .section-02-content p {
+    font-size: 14px;
+    line-height: 24px;
+  }
+  .section-02 .section-02-content img {
+    margin-bottom: 24px;
   }
 }
 
