--- a/Newrich/style.css
+++ b/Newrich/style.css
@@ -122,9 +122,7 @@ nav .navbar .links li > .sub-menu li:hover > ul.deep-sub-menu {
 .navbar .links li .sub-menu .more-arrow {
   line-height: 40px;
 }
-.navbar .links li .htmlCss-more-sub-menu {
-  /* line-height: 40px; */
-}
+
 .navbar .links li .sub-menu .more-sub-menu {
   position: absolute;
   top: 0;
@@ -561,7 +559,7 @@ ul {
   color: #fff;
   font-size: 20px;
   font-weight: 600;
-  margin-bottom: 40px;
+  margin-bottom: 10px;
   position: relative;
 }
 .footer-widget-heading h3::before {
@@ -686,9 +684,84 @@ ul {
   .section-02 .section-02-img img {
     width: 378px;
   }
+
+  .section-09-bg {
+    height: auto !important;
+  }
 }
 
-/* contact section CSS */
+/* section-08-css */
+.section-08 {
+  padding: 60px 0;
+}
+.section-08 h2 {
+  font-size: 44px;
+  font-weight: 600;
+  max-width: 427px;
+  margin-top: 20px;
+  margin-bottom: 74px;
+}
+.section-08 .section-08-content {
+  column-gap: 103px;
+}
+.section-08 a.whyChoose {
+  background-color: rgba(255, 150, 20, 1);
+}
+
+.section-08 > a {
+  background-color: rgba(255, 85, 62, 1);
+}
+
+.section-08 a {
+  text-decoration: none;
+}
+
+/* section -09 css */
+
+.section-09-bg {
+  background: url("./assets/section-09-bg-1440.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  padding: 62px 0 24px 43px;
+  height: 430px;
+}
+.section-09-bg h2 {
+  font-size: 48px;
+  font-weight: 700;
+  max-width: 500px;
+}
+.section-09-bg p {
+  font-size: 18px;
+  font-weight: 600;
+  margin-top: 42px;
+  margin-bottom: 32px;
+}
+
+.section-09-bg input[type="submit"] {
+  background: rgb(24, 23, 23);
+  color: #fff;
+  font-size: 18px;
+  padding: 15px;
+  line-height: 24px;
+  border-radius: 6px;
+  border: none;
+}
+.section-09-bg input[type="email"] {
+  width: 350px;
+  height: 54px;
+  border-radius: 6px;
+}
+.section-09-bg input[type="email"]::placeholder {
+  font-size: 18px;
+  font-weight: 500px;
+}
+
+.section-09-bg form div img {
+  top: 14px;
+  left: 18px;
+}
+
+/* section-10 contact section CSS */
 
 /*--------------------------------------------------------------
 # Contact
@@ -1144,7 +1217,31 @@ ul {
   .contact .php-email-form textarea {
     height: 176px;
   }
-
+  .section-09-bg {
+    padding: 25px 0 25px 21px;
+    height: 268px;
+  }
+  .section-09-bg h2 {
+    font-size: 24px;
+    max-width: 300px;
+    line-height: 39px;
+  }
+  .section-09-bg p {
+    margin-top: 24px;
+    margin-bottom: 10px;
+    font-size: 16px;
+  }
+  .section-09-bg input[type="email"] {
+    width: 237px;
+    height: 45px;
+  }
+  .section-09-bg input[type="submit"] {
+    padding: 10px 16px;
+    font-size: 16px;
+  }
+  .section-09-bg form {
+    gap: 14px !important;
+  }
   /* section 05 css */
   /* 
   .section-05 .steps .number {
@@ -1433,6 +1530,44 @@ ul {
   }
   .section-05 .phase-02 {
     margin-bottom: 25px;
+  }
+
+  /* ============ section-09 bg ============= */
+  .section-09-bg {
+    background: url(./assets/section-09-mobile-bg.png);
+    background-repeat: no-repeat;
+    background-size: auto;
+    background-position: top center;
+    height: 430px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 18px 0 25px 0px;
+  }
+  .section-09-bg h2 {
+    text-align: center;
+    max-width: 100%;
+    font-size: 20px;
+  }
+  .section-09-bg p {
+    margin-top: 216px;
+    font-size: 14px;
+  }
+  .section-09-bg input[type="email"] {
+    width: 303px;
+  }
+  .section-09-bg input[type="email"]::placeholder {
+    text-align: center;
+  }
+  /* footer custom css */
+  footer .footer-content .footer-widget {
+    column-gap: 15px;
+  }
+  footer .footer-content .footer-widget .footer-widget-heading {
+    font-size: 16px;
+  }
+  .footer-widget ul li a {
+    font-size: 14px;
   }
 }
 
