--- a/Newrich/style.css
+++ b/Newrich/style.css
@@ -20,6 +20,12 @@ nav {
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
   z-index: 99;
 }
+
+header .stickyNav {
+  position: fixed;
+  top: 0;
+}
+
 nav .navbar {
   height: 100%;
   max-width: 1140px;
